fix feedback button, update select option, fix horizontal scroll

--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 body{
-    position: relative;
+  position: relative;
   margin: 0;
   min-height: 100%;
+  overflow-x: hidden;
 }
 
 html{
     height: 100%;
+    overflow-x: hidden;
 }
 
 .tituloP{
@@ -123,3 +125,4 @@ select{
 .iti{
     margin-bottom: 20px;
 }
+
